// Vitest Snapshot v1

exports[`should display the error received 1`] = `
<body>
  <div>
    <div>
      <div
        class="makeStyles-propertySectionLabel-26"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Label
        </h6>
        <div
          class="makeStyles-subscribers-27"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-22 makeStyles-style-24 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div>
      <div
        class="makeStyles-propertySectionLabel-26"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Label
        </h6>
        <div
          class="makeStyles-subscribers-27"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-22 makeStyles-style-24 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render a readOnly button 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Label
      </h6>
      <div
        class="makeStyles-subscribers-13"
      />
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-8 makeStyles-style-10 MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
      data-testid="ButtonLabel"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
    </button>
  </div>
</div>
`;

exports[`should render the button 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-5"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Label
      </h6>
      <div
        class="makeStyles-subscribers-6"
      />
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-1 makeStyles-style-3 MuiButton-contained MuiButton-containedPrimary"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`should render the button with empty style 1`] = `
<body>
  <div>
    <div>
      <div
        class="makeStyles-propertySectionLabel-47"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Label
        </h6>
        <div
          class="makeStyles-subscribers-48"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-43 makeStyles-style-45 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button with help hint 1`] = `
<body>
  <div>
     
    <div>
      <div
        class="makeStyles-propertySectionLabel-54"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Label
        </h6>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
          focusable="false"
          style="margin-left: 8px; font-size: 16px;"
          title=""
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
        <div
          class="makeStyles-subscribers-55"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-50 makeStyles-style-52 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button with style 1`] = `
<body>
  <div>
    <div>
      <div
        class="makeStyles-propertySectionLabel-40"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Label
        </h6>
        <div
          class="makeStyles-subscribers-41"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-36 makeStyles-style-38 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button without style 1`] = `
<body>
  <div>
    <div>
      <div
        class="makeStyles-propertySectionLabel-33"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2"
        >
          Label
        </h6>
        <div
          class="makeStyles-subscribers-34"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root makeStyles-style-29 makeStyles-style-31 MuiButton-contained MuiButton-containedPrimary"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          ButtonLabel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-19"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Label
      </h6>
      <div
        class="makeStyles-subscribers-20"
      />
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-15 makeStyles-style-17 MuiButton-contained MuiButton-containedPrimary"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-19"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Label
      </h6>
      <div
        class="makeStyles-subscribers-20"
      />
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root makeStyles-style-15 makeStyles-style-17 MuiButton-contained MuiButton-containedPrimary"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        ButtonLabel
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
